--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <h1><a href="index.html">Mehreen Junaid</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <h2>I'm a passionate <span>Computer Science Engineering</span> junior student from India</h2>
+      <h2>I'm a passionate <span>Computer Science</span> junior at Effat University</h2>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -59,7 +59,7 @@
 
       <div class="social-links">
         <a href="https://github.com/mehreenjunaid23" class="Github"><i class="bi bi-github"></i></a>
-        <a href="www.linkedin.com/in/mehreen-junaid" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/mehreen-junaid/" class="linkedin"><i class="bi bi-linkedin"></i></a>
       </div>
 
     </div>
@@ -354,7 +354,7 @@ Overall, I am a self-assured and diligent student with a strong passion for comp
             <h3>Social Profiles</h3>
             <div class="social-links">
                <a href="https://github.com/mehreenjunaid23" class="Github"><i class="bi bi-github"></i></a>
-                <a href="www.linkedin.com/in/mehreen-junaid" class="linkedin"><i class="bi bi-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/mehreen-junaid/" class="linkedin"><i class="bi bi-linkedin"></i></a>
             </div>
           </div>
         </div>
