--- a/index.html
+++ b/index.html
@@ -268,61 +268,71 @@ Overall, I am a self-assured and diligent student with a strong passion for comp
   </section><!-- End About Section -->
 
 
-  <!-- ======= Services Section ======= -->
-  <section id="services" class="services">
-    <div class="container">
+      <!-- ======= Services Section ======= -->
+    <section id="services" class="services">
+      <div class="container">
 
-      <div class="section-title">
-        <h2>Projects</h2>
-        <p>My Works</p>
+        <div class="section-title">
+          <h2>Projects</h2>
+          <p>My Works</p>
+        </div>
+        <div class="row">
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
+            <div class="icon-box">
+              <div class="icon"><i class="bx bx-file"></i></div>
+              <h4><a href="">File Manipulation Program</a></h4>
+              <p>  • File manipulation program that allows you to perform various functions on a text file. The program is written in Python
+                and can be executed by running the main function in the program.</p>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
+            <div class="icon-box">
+              <div class="icon"><i class="bx bx-file"></i></div>
+              <h4><a href="">Airline-Reservation</a></h4>
+              <p>  • Built an airline reservation system.<br>
+                • The system consists of several classes to manage flights, reservations, and waiting lists.</p>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
+            <div class="icon-box">
+              <div class="icon"><i class="bx bx-file"></i></div>
+              <h4><a href="">Rasis - Poetry Club website</a></h4>
+              <p>  • A website project for a client who requested a platform where users can post poems with a description of genre and
+                title, and interact with the website manager. The website also displays the most popular poems on the home page.</p>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
+            <div class="icon-box">
+              <div class="icon"><i class="bx bx-file"></i></div>
+              <h4><a href="">DokanCaco</a></h4>
+              <p>  • Built a chocolate store website for browsing and ordering various chocolate products for a client.</p>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
+            <div class="icon-box">
+              <div class="icon"><i class="bx bx-file"></i></div>
+              <h4><a href="">School Management System</a></h4>
+              <p>• Developed a program to manage the data for a school with students and courses.<br>
+                • Implemented the program using objects from the different classes, based on a UML class diagram.</p>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
+            <div class="icon-box">
+              <div class="icon"><i class="bx bx-file"></i></div>
+              <h4><a href="">Numerical Methods</a></h4>
+              <p>  • Implemented some of the numerical solutions for non-linear equations.<br>
+                • Algebraic equations: Bisection, Newton, and Secant methods.<br>
+                • Differential equations: Euler, Taylor, and Runge-Kutta methods.</p>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="row">
-        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
-          <div class="icon-box">
-            <div class="icon"><i class="bx bx-file"></i></div>
-            <h4><a href="">Sed ut perspiciatis</a></h4>
-            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
-          <div class="icon-box">
-            <div class="icon"><i class="bx bx-tachometer"></i></div>
-            <h4><a href="">Magni Dolores</a></h4>
-            <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
-          <div class="icon-box">
-            <div class="icon"><i class="bx bx-world"></i></div>
-            <h4><a href="">Nemo Enim</a></h4>
-            <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
-          <div class="icon-box">
-            <div class="icon"><i class="bx bx-slideshow"></i></div>
-            <h4><a href="">Dele cardo</a></h4>
-            <p>Quis consequatur saepe eligendi voluptatem consequatur dolor consequuntur</p>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
-          <div class="icon-box">
-            <div class="icon"><i class="bx bx-arch"></i></div>
-            <h4><a href="">Divera don</a></h4>
-            <p>Modi nostrum vel laborum. Porro fugit error sit minus sapiente sit aspernatur</p>
-          </div>
-        </div>
-
-      </div>
-
-    </div>
-  </section><!-- End Services Section -->
-
- 
+    </section><!-- End Services Section -->
 
   <!-- ======= Contact Section ======= -->
   <section id="contact" class="contact">
