--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <img src="assets/img/me.jpg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <h3>UI/UX &amp; Graphic Designer</h3>
+          <h3>CS Engineering Student</h3>
           <p class="fst-italic">
             Hello, my name is <span>Mehreen Junaid</span>, and I am a passionate third-year Computer Science student. I have maintained a remarkable academic record and currently have a GPA of 3.88 out of 4. My dedication and hard work have led me to be recognized on the Dean's List at my university.
           </p>
