--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link active" href="#header">Home</a></li>
+          <li><a class="nav-link" href="#resume">Highlights</a></li>
           <li><a class="nav-link" href="#about">About</a></li>
           <li><a class="nav-link" href="assets/mehreen_junaid_resume.pdf">Resume</a></li>
           <li><a class="nav-link" href="#services">Projects</a></li>
@@ -64,6 +65,57 @@
 
     </div>
   </header><!-- End Header -->
+  <!-- ======= Highlight Section ======= -->
+  <section id="resume" class="resume">
+    <div class="container">
+
+      <div class="section-title">
+        <h2>Highlights</h2>
+        <p>Notable Achievements</p>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-6">
+          <h3 class="resume-title">Dean's List</h3>
+          <div class="resume-item">
+            <h5>2022 - 2023</h5>
+            <p>Throughout my academic journey, I consistently maintained a high level of excellence and was recognized for my outstanding performance by being placed on the Dean's List. With a GPA of 3.88, I demonstrated a strong commitment to my studies and achieved academic success.</p>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <img src="assets/img/dean.png" alt="L&T paper" class="resume-image" style="float: right;">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-6">
+          <h3 class="resume-title">Published Paper</h3>
+          <div class="resume-item">
+            <h4>"The Redefinition of mHealth Applications in the Metaverse"</h4>
+            <h5>JAN 2023</h5>
+            <p>I have contributed to the field of research by publishing a paper in the prestigious L&T 2023 conference. The paper can be accessed <a href="https://ieeexplore.ieee.org/document/10092356" target="_blank">here</a>. This publication highlights my in-depth knowledge and innovative thinking in the emerging domain of mHealth applications.</p>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <img src="assets/img/paper.png" alt="L&T paper" class="resume-image" style="float: right;">
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-6">
+          <h3 class="resume-title">First Place in Undergraduate Research Forum (UGRF 2023)</h3>
+          <div class="resume-item">
+            <h4>Longitudinal Analysis of the Effectiveness of a VR-Based Parent-Child Interactive Training Program in Promoting Positive Parenting</h4>
+            <h5>MAY 2023</h5>
+            <p>I achieved a significant milestone in my academic journey by winning the first place in the Undergraduate Research Forum 2023, surpassing competitors across all tracks. My paper, titled "Longitudinal Analysis of the Effectiveness of a VR-Based Parent-Child Interactive Training Program in Promoting Positive Parenting," showcases my dedication to conducting impactful research and contributing to the field.</p>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <img src="assets/img/4thUGRF.png" alt="UGRF award" class="resume-image" style="float: right;">
+        </div>
+      </div>
+
+    </div>
+  </section><!-- End Highlight Section -->
 
   <!-- ======= About Section ======= -->
   <section id="about" class="about">
